Fix overflow on editor

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -39,6 +39,7 @@ header{
 
 #content {
   color: #000;
+  overflow-y: scroll;
 }
 
 header{
